Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91401

Error loading PNG: Unsupported ICC profile class 70727472

XMLWordPrintable

    • All
    • 63152571844a15adfa76db5f8a9e7a505da75412 (qt/qtbase/dev) 60c5f9502f9fc5405a9d9991617709a06ca1a39d (qt/qtbase/6.0) 627bae700f3f94d5c38ad8b9749a0d2661bc4207 (qt/qtbase/6.1) 5c5feefea89f8fd12c5adc3fc2e6ad57e320298e (qt/tqtc-qtbase/tqtc/lts-5.15)

      Steps to reproduce:

      • Launch examples/widgets/widgets/imageviewer
      • Open attached png
      • Observe warnings

      Occurs when trying to load an image with an alpha channel

      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      qt.gui.icc: Unsupported ICC profile class 70727472
      qt.gui.imageio: QPngHandler: Failed to parse ICC profile
      

        1. report.rar
          31 kB
          Denis Eremenko
        2. qtbug91401.png
          3 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            dryerem19 Denis Eremenko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes